syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.choreo.connect.discovery.subscription";
option java_outer_classname = "ApplicationProto";
option java_multiple_files = true;

// [#protodoc-title: Application]

// Application data model
message Application {
    int32 id = 1;
    string uuid = 2;
	string name = 3;
	int32 subId = 4;
	string subName = 5;
	string policy = 6;
	string tokenType = 7;
	map<string, string> attributes = 8;
	int32 tenantId = 9;
	string tenantDomain = 10;
	int64 timestamp = 11;
}
