syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.apk.enforcer.discovery.subscription";
option java_outer_classname = "JWTIssuerProto";
option java_multiple_files = true;

// [#protodoc-title: JWTIssuer]

// JWTIssuer data model
message JWTIssuer {
    string eventId = 1;
    string name = 2;
    string organization = 3;
    string issuer = 4;
    Certificate certificate = 5;
    string consumerKeyClaim = 6;
    string scopesClaim = 7;
}
message Certificate {
    string certificate = 1;
    JWKS jwks = 2;
}
message JWKS {
    string url = 1;
    string tls = 2;
}
